# python-devops

./: .gitignore  Cases_naming.md  README.md  test.bat
Chapter21/mytool/: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
Chapter21/mytool/src/mytool/: cli.py  config.py  core.py  logging.py
Chapter21/mytool/src/mytool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Chapter21/mytool/tests/: test_core.py
Chapter22/deploy_guard/: .coverage  README.md  pyproject.toml
Chapter22/deploy_guard/.github/workflows/: ci.yaml
Chapter22/deploy_guard/src/deploy_guard/: cli.py  config.py  logging.py
Chapter22/deploy_guard/src/deploy_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Chapter22/deploy_guard/src/deploy_guard/core/: api_checks.py  deploy_k8s.py  env_gate.py  health_checks.py  pipeline.py  release_guard.py
Chapter22/deploy_guard/src/deploy_guard/notes/: release_notes.py
Chapter22/deploy_guard/tests/: test_api_checks.py  test_env_gate.py  test_health_checks.py
Chapter22/project/release_sentinel/: .gitignore  Dockerfile  README.md  pyproject.toml
Chapter22/project/release_sentinel/.github/workflows/: release-sentinel.yml
Chapter22/project/release_sentinel/alerts/: webhook.py
Chapter22/project/release_sentinel/k8s/: release-sentinel-job.yaml
Chapter22/project/release_sentinel/src/release_sentinel/: cli.py  core.py  (+3 more)
Chapter22/project/release_sentinel/tests/: test_api_check.py  test_config_gate.py  test_core.py  test_core_exit_codes.py  test_env_gate.py  test_system_checks.py
(+154 files in other folders)
