[project]
name = "mytool"
version = "0.1.0"
description = "Production-grade Python DevOps tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ganesh" }]

[project.scripts]
mytool = "mytool.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit"]